--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -81,16 +81,16 @@
                                     </div>
                                 </div>
                             </div>
-                            <!--发表评论与登录-->
+                            <!--评论模块-->
                             <div class="row">
-                                <div class="col s12 m12 l12 xl12">
+                                <div class="col s12 m12 l10 xl10 offset-l1 offset-xl1">
                                     <div class="row center">
                                         <h5 class="grey-text">0条评论</h5>
                                     </div>
                                     <div class="divider"></div>
                                     <br>
                                     <div class="row login-block">
-                                        <div class="col s12 m12 l10 xl10 offset-l1 offset-xl1">
+                                        <div class="col s12 m12 l12 xl12">
                                             <br>
                                             <div class="input-field">
                                                 <i class="material-icons prefix">mode_edit</i>
@@ -108,8 +108,8 @@
                                                         {{ login_info.user_info.nickname }}
                                                     </div>
                                                     <!--发表评论按钮-->
-                                                    <a class="btn waves-effect green lighten-3 right disabled" id="comment-publish-btn">
-                                                        发表(评论系统升级中)</a>
+                                                    <a class="btn waves-effect green lighten-3 right" id="comment-publish-btn">
+                                                        发表</a>
                                                 <!--如果还没有登录-->
                                                 {% else %}
                                                     <!--未登录提示-->
@@ -135,6 +135,69 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <br>
+                                    <!--这里开始是所有评论-->
+                                    <!--一条评论-->
+                                    {% for comment_level_1 in comments %}
+                                        <div class="divider"></div>
+                                        <br>
+                                        <div class="row">
+                                            <div class="col s12 m12 l12 xl12">
+                                                <div class="chip">
+                                                    {% if comment_level_1.parent.sender.avatar == '' %}
+                                                        <img src="{% static 'main/img/about_bg.png' %}">
+                                                    {% else %}
+                                                        <img src="{{ comment_level_1.parent.sender.avatar }}">
+                                                    {% endif %}
+                                                    {{ comment_level_1.parent.sender.nickname }}
+                                                </div>
+                                                <a class="grey-text right hide-on-small-only"><i class="material-icons">reply</i></a>
+                                                <a class="grey-text right hide-on-small-only">
+                                                    {{ comment_level_1.parent.time.year }}·{{ comment_level_1.parent.time.month }}·{{ comment_level_1.parent.time.day }}&nbsp;{{ comment_level_1.parent.time.hour }}:{{ comment_level_1.parent.time.minute }}&nbsp;</a>
+                                                <p>{{ comment_level_1.parent.context }}</p>
+                                                <a class="grey-text left hide-on-med-and-up">
+                                                    {{ comment_level_1.parent.time.year }}·{{ comment_level_1.parent.time.month }}·{{ comment_level_1.parent.time.day }}&nbsp;{{ comment_level_1.parent.time.hour }}:{{ comment_level_1.parent.time.minute }}
+                                                </a>
+                                                <a class="grey-text right hide-on-med-and-up"><i class="material-icons">reply</i></a>
+                                                {% if comment_level_1.children %}
+                                                    <!--子评论-->
+                                                    <div class="row">
+                                                    <div class="col s10 m10 l10 xl10 offset-s2 offset-m2 offset-l2 offset-xl2">
+                                                        <br>
+                                                        {% for comment_level_2 in comment_level_1.children %}
+                                                            <div class="divider"></div>
+                                                            <br>
+                                                            <div class="row">
+                                                                <div class="col s12 m12 l12 xl12">
+                                                                    <div class="chip">
+                                                                        {% if comment_level_2.sender.avatar == '' %}
+                                                                            <img src="{% static 'main/img/about_bg.png' %}">
+                                                                        {% else %}
+                                                                            <img src="{{ comment_level_2.sender.avatar }}">
+                                                                        {% endif %}
+                                                                        {{ comment_level_2.sender.nickname }}
+                                                                    </div>
+                                                                    <a class="grey-text right hide-on-small-only"><i class="material-icons">reply</i></a>
+                                                                    <a class="grey-text right hide-on-small-only">
+                                                                        {{ comment_level_2.time.year }}·{{ comment_level_2.time.month }}·{{ comment_level_2.time.day }}&nbsp;{{ comment_level_2.time.hour }}:{{ comment_level_2.time.minute }}&nbsp;
+                                                                    </a>
+                                                                    <p>回复{{ comment_level_2.receiver.nickname }}:&nbsp;{{ comment_level_2.context }}</p>
+                                                                    <a class="grey-text left hide-on-med-and-up">
+                                                                        {{ comment_level_2.time.year }}·{{ comment_level_2.time.month }}·{{ comment_level_2.time.day }}&nbsp;{{ comment_level_2.time.hour }}:{{ comment_level_2.time.minute }}
+                                                                    </a>
+                                                                    <a class="grey-text right hide-on-med-and-up"><i class="material-icons">reply</i></a>
+                                                                </div>
+                                                            </div>
+                                                        {% endfor %}
+                                                    </div>
+                                                </div>
+                                                {% endif %}
+                                            </div>
+                                        </div>
+                                    {% endfor %}
+                                    <!--评论结束的最终分隔符-->
+                                    <br>
+                                    <div class="divider"></div>
                                 </div>
                             </div>
                         </div>
@@ -257,7 +320,7 @@
                             // 发送 Ajax 请求
                             $.ajax({
                                 url: '/login/local/register',
-                                type: 'post',
+                                type: 'POST',
                                 dataType: 'json',
                                 data: JSON.stringify(register_request_obj),
                                 async: true,
@@ -342,6 +405,34 @@
                     }
                 });
             });
+
+            {% if login_info.login_state %}
+                // 发表评论按钮响应
+                $('#comment-publish-btn').click(function () {
+                var comment_publish_request = {
+                    sender: {{ login_info.user_info.pk }},
+                    post: {{ post.pk }},
+                    context: $('#comment-input').val()
+                };
+                // 发送请求来发表评论
+                $.ajax({
+                    url: '/comment/publish',
+                    type: 'POST',
+                    async: true,
+                    dataType: 'json',
+                    data: JSON.stringify(comment_publish_request),
+                    success: function (jsonObj) {
+                        // 查看是否成功
+                        if (jsonObj.state) {
+                            Materialize.toast('发表成功!两秒后为你刷新页面!', 2000);
+                            setTimeout(function () {
+                                window.location.reload();
+                            }, 2000);
+                        }
+                    }
+                })
+            });
+            {% endif %}
         });
     </script>
 {% endblock %}
