优化评论字体显示

--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -82,7 +82,7 @@
                                 </div>
                             </div>
                             <!--评论模块-->
-                            <div class="row">
+                            <div class="row comment-model">
                                 <div class="col s12 m12 l10 xl10 offset-l1 offset-xl1">
                                     <div class="row center">
                                         <h5 class="grey-text">0条评论</h5>
