--- a/main/static/main/css/post.css
+++ b/main/static/main/css/post.css
@@ -54,7 +54,9 @@ body .tags {
     padding: 0;
 }
 
-body .main, body .extend .comment-model {
+body .main,
+body .section .extend .comment-model .comment-level-1-block,
+body .section .extend .comment-model .comment-level-1-block .comment-level-2-model .comment-level-2-block {
     /*自动换行*/
     white-space: pre-wrap;
     word-break: break-all;
