--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -162,7 +162,7 @@
                                                 <a class="grey-text right hide-on-small-only"><i class="material-icons">reply</i></a>
                                                 <a class="grey-text right hide-on-small-only">
                                                     {{ comment_level_1.parent.time.year }}·{{ comment_level_1.parent.time.month }}·{{ comment_level_1.parent.time.day }}&nbsp;{{ comment_level_1.parent.time.hour }}:{{ comment_level_1.parent.time.minute }}&nbsp;</a>
-                                                <p>{{ comment_level_1.parent.context }}</p>
+                                                <p class="comment-text">{{ comment_level_1.parent.context }}</p>
                                                 <a class="grey-text left hide-on-med-and-up">
                                                     {{ comment_level_1.parent.time.year }}·{{ comment_level_1.parent.time.month }}·{{ comment_level_1.parent.time.day }}&nbsp;{{ comment_level_1.parent.time.hour }}:{{ comment_level_1.parent.time.minute }}
                                                 </a>
