--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -85,7 +85,7 @@
                             <div class="row comment-model">
                                 <div class="col s12 m12 l10 xl10 offset-l1 offset-xl1">
                                     <div class="row center">
-                                        <h5 class="grey-text">条评论</h5>
+                                        <h5 class="grey-text">{{ comments_info.length }}条评论</h5>
                                     </div>
                                     <div class="divider"></div>
                                     <br>
@@ -95,7 +95,7 @@
                                             <div class="input-field">
                                                 <i class="material-icons prefix">mode_edit</i>
                                                 <textarea class="materialize-textarea" id="comment-input"></textarea>
-                                                <label for="comment-input">{{ comments_info.length }}发表你的评论</label>
+                                                <label for="comment-input">发表你的评论</label>
                                                 <!--如果用户已经登录了-->
                                                 {% if login_info.login_state %}
                                                     <!--用户信息chip-->
