--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -162,7 +162,7 @@
                                                     {% endif %}
                                                 </div>
                                                 <!--回复-large-->
-                                                <a class="grey-text right hide-on-small-only reply-link-large-level1 modal-trigger" href="#reply-modal"
+                                                <a class="grey-text right hide-on-small-only reply-link-large-level1 modal-trigger" href="javascript:void(0);"
                                                     id="reply-link-large-level1_{{ comment_level_1.parent.pk }}"><i class="material-icons">reply</i></a>
                                                 <a class="grey-text right hide-on-small-only">
                                                     {{ comment_level_1.parent.time.year }}·{{ comment_level_1.parent.time.month }}·{{ comment_level_1.parent.time.day }}&nbsp;{{ comment_level_1.parent.time.hour }}:{{ comment_level_1.parent.time.minute }}&nbsp;</a>
@@ -171,7 +171,7 @@
                                                     {{ comment_level_1.parent.time.year }}·{{ comment_level_1.parent.time.month }}·{{ comment_level_1.parent.time.day }}&nbsp;{{ comment_level_1.parent.time.hour }}:{{ comment_level_1.parent.time.minute }}
                                                 </a>
                                                 <!--回复small-->
-                                                <a class="grey-text right hide-on-med-and-up reply-link-small-level1 modal-trigger" href="#reply-modal"
+                                                <a class="grey-text right hide-on-med-and-up reply-link-small-level1 modal-trigger" href="javascript:void(0);"
                                                     id="reply-link-small-level1_{{ comment_level_1.parent.pk }}"><i class="material-icons">reply</i></a>
                                                 {% if comment_level_1.children %}
                                                     <!--子评论-->
@@ -197,7 +197,7 @@
                                                                         {% endif %}
                                                                     </div>
                                                                     <!--回复large-->
-                                                                    <a class="grey-text right hide-on-small-only reply-link-large-level2 modal-trigger" href="#reply-modal"
+                                                                    <a class="grey-text right hide-on-small-only reply-link-large-level2 modal-trigger" href="javascript:void(0);"
                                                                         id="reply-link-large-level1_{{ comment_level_1.parent.pk }}-level2_{{ comment_level_2.pk }}"><i class="material-icons">reply</i></a>
                                                                     <a class="grey-text right hide-on-small-only">
                                                                         {{ comment_level_2.time.year }}·{{ comment_level_2.time.month }}·{{ comment_level_2.time.day }}&nbsp;{{ comment_level_2.time.hour }}:{{ comment_level_2.time.minute }}&nbsp;
@@ -207,7 +207,7 @@
                                                                         {{ comment_level_2.time.year }}·{{ comment_level_2.time.month }}·{{ comment_level_2.time.day }}&nbsp;{{ comment_level_2.time.hour }}:{{ comment_level_2.time.minute }}
                                                                     </a>
                                                                     <!--回复small-->
-                                                                    <a class="grey-text right hide-on-med-and-up reply-link-small-level2 modal-trigger" href="#reply-modal"
+                                                                    <a class="grey-text right hide-on-med-and-up reply-link-small-level2 modal-trigger" href="javascript:void(0);"
                                                                         id="reply-link-small-level1_{{ comment_level_1.parent.pk }}-level2_{{ comment_level_2.pk }}"><i class="material-icons">reply</i></a>
                                                                 </div>
                                                             </div>
@@ -302,6 +302,7 @@
     <script>
         // 按照评论显示的结构获取 pk 数据
         var comments_info = [];
+        var i = 0;
         {% for comment_level_1 in comments_info.comments %}
             comments_info.push({
                 parent: {
@@ -313,13 +314,14 @@
                 children: []
             });
             {% for comment_level_2 in comment_level_1.children %}
-                comments_info.children.push({
+                comments_info[i].children.push({
                     sender: {
                         pk: {{ comment_level_2.sender.pk }}
                     },
                     pk: {{ comment_level_2.pk }}
                 });
             {% endfor %}
+            i++;
         {% endfor %}
 
         // 储存文章 pk
@@ -334,6 +336,9 @@
             parent: 0,
             context: ''
         };
+
+        // 是否登录
+        var login_state = {% if login_info.login_state %}true{% else %}false{% endif %};
 
         $(document).ready(function () {
             // sha256 js 插件初始化
@@ -520,53 +525,65 @@
 
             // level1 回复按钮响应
             $('.reply-link-large-level1, .reply-link-small-level1').click(function () {
-                var parent;
-                // 将 id 分片
-                var replyBtnIdArray = $(this).attr('id').split('-');
+                if (login_state) {
+                    $('#reply-modal').modal('open');
 
-                // 寻找 parent 评论
-                for (var comment in comments_info) {
-                    if (comment.parent.pk === parseInt(replyBtnIdArray[3].split('_')[1])) {
-                        parent = comment.parent;
-                        break;
+                    var parent;
+                    // 将 id 分片
+                    var replyBtnIdArray = $(this).attr('id').split('-');
+
+                    // 寻找 parent 评论
+                    for (var i = 0; i < comments_info.length; i++) {
+                        if (comments_info[i].parent.pk === parseInt(replyBtnIdArray[3].split('_')[1])) {
+                            parent = comments_info[i].parent;
+                            break;
+                        }
                     }
-                }
 
-                // 将信息存入临时变量
-                replyObj.receiver = parent.sender.pk;
-                replyObj.post = post.pk;
-                replyObj.parent = parent.pk;
+                    // 将信息存入临时变量
+                    replyObj.receiver = parent.sender.pk;
+                    replyObj.post = post.pk;
+                    replyObj.parent = parent.pk;
+                } else {
+                    Materialize.toast('请先登录后再回复哦!', 4000);
+                }
             });
 
             // level2 回复按钮响应
             $('.reply-link-large-level2, .reply-link-small-level2').click(function () {
-                var parent;
-                var child;
-                // 将 id 切片
-                var replyBtnIdArray = $(this).attr('id').split('-');
-                var complete = false;
+                if (login_state) {
+                    $('#reply-modal').modal('open');
 
-                // 寻找 parent 和 child
-                for (var comment in comments_info) {
-                    if (comment.parent.pk === parseInt(replyBtnIdArray[3].split('_')[1])) {
-                        parent = comment.parent;
-                        for (var comment2 in parent.children) {
-                            if (comment2.pk === parseInt(replyBtnIdArray[4].split(_)[1])) {
-                                child = comment2;
-                                complete = true;
-                                break;
+                    var parent;
+                    var child;
+                    // 将 id 切片
+                    var replyBtnIdArray = $(this).attr('id').split('-');
+                    var complete = false;
+
+                    // 寻找 parent 和 child
+                    for (var comment in comments_info) {
+                        if (comment.parent.pk === parseInt(replyBtnIdArray[3].split('_')[1])) {
+                            parent = comment.parent;
+                            for (var comment2 in parent.children) {
+                                if (comment2.pk === parseInt(replyBtnIdArray[4].split(_)[1])) {
+                                    child = comment2;
+                                    complete = true;
+                                    break;
+                                }
                             }
                         }
+                        if (complete) {
+                            break;
+                        }
                     }
-                    if (complete) {
-                        break;
-                    }
-                }
 
-                // 将信息存入临时变量
-                replyObj.receiver = child.sender.pk;
-                replyObj.post = post.pk;
-                replyObj.parent = parent.pk;
+                    // 将信息存入临时变量
+                    replyObj.receiver = child.sender.pk;
+                    replyObj.post = post.pk;
+                    replyObj.parent = parent.pk;
+                } else {
+                    Materialize.toast('请先登录后再回复哦!', 4000);
+                }
             });
 
             // 响应发表回复按钮
