--- a/templates/main/message.html
+++ b/templates/main/message.html
@@ -24,13 +24,34 @@
         <div class="row">
             <div class="container">
                 <br>
-                <div class="row">
+                <div class="row hide-on-med-and-down">
                     <div class="col s12 m12 l6 xl6">
-                        {% for card in left_cards %}
+                        <div class="card white">
+                            <div class="card-content">
+                                {% if login_info.login_state %}
+                                    <span class="card-title">您已登录</span>
+                                    <p>欢迎您, {{ login_info.user_info.nickname }}</p>
+                                {% else %}
+                                    <span class="card-title">您还没有登录哦!</span>
+                                    <p>登录体验更多内容</p>
+                                {% endif %}
+                            </div>
+                            <div class="card-action">
+                                {% if login_info.login_state %}
+                                    <a href="javascript:void(0);" id="logout-btn">注销</a>
+                                {% else %}
+                                    <a href="#login-modal-local" id="login-local-btn" class="modal-trigger">Local</a>
+                                    <a href="https://graph.qq.com/oauth2.0/authorize?response_type=code&client_id={{ login_param.qq.client_id }}&redirect_uri={{ login_param.qq.callback }}&state=true">QQ</a>
+                                    <a href="https://github.com/login/oauth/authorize?client_id={{ login_param.github.client_id }}">GitHub</a>
+                                {% endif %}
+                            </div>
+                        </div>
+
+                        {% for card in card_info.left %}
                             <div class="card white">
                                 <div class="card-content">
-                                    <span class="card-title">{{ card.title }}</span>
-                                    <p>{{ card.text }}</p>
+                                    <span class="card-title">{{ card.body.title }}</span>
+                                    <p>{{ card.body.content }}</p>
                                 </div>
                                 <div class="card-action">
                                     {% for link in card.links %}
@@ -42,11 +63,50 @@
                     </div>
 
                     <div class="col s12 m12 l6 xl6">
-                        {% for card in right_cards %}
+                        {% for card in card_info.right %}
                             <div class="card white">
                                 <div class="card-content">
-                                    <span class="card-title">{{ card.title }}</span>
-                                    <p>{{ card.text }}</p>
+                                    <span class="card-title">{{ card.body.title }}</span>
+                                    <p>{{ card.body.content }}</p>
+                                </div>
+                                <div class="card-action">
+                                    {% for link in card.links %}
+                                        <a href="{{ link.href }}">{{ link.name }}</a>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <div class="row hide-on-large-only">
+                    <div class="col s12 m12 l6 xl6">
+                        <div class="card white">
+                            <div class="card-content">
+                                {% if login_info.login_state %}
+                                    <span class="card-title">您已登录</span>
+                                    <p>欢迎您, {{ login_info.user_info.nickname }}</p>
+                                {% else %}
+                                    <span class="card-title">您还没有登录哦!</span>
+                                    <p>登录体验更多内容</p>
+                                {% endif %}
+                            </div>
+                            <div class="card-action">
+                                {% if login_info.login_state %}
+                                    <a href="javascript:void(0);" id="logout-btn">注销</a>
+                                {% else %}
+                                    <a href="#login-modal-local" id="login-local-btn" class="modal-trigger">Local</a>
+                                    <a href="https://graph.qq.com/oauth2.0/authorize?response_type=code&client_id={{ login_param.qq.client_id }}&redirect_uri={{ login_param.qq.callback }}&state=true">QQ</a>
+                                    <a href="https://github.com/login/oauth/authorize?client_id={{ login_param.github.client_id }}">GitHub</a>
+                                {% endif %}
+                            </div>
+                        </div>
+
+                        {% for card in card_info.all %}
+                            <div class="card white">
+                                <div class="card-content">
+                                    <span class="card-title">{{ card.body.title }}</span>
+                                    <p>{{ card.body.content }}</p>
                                 </div>
                                 <div class="card-action">
                                     {% for link in card.links %}
@@ -60,15 +120,154 @@
             </div>
         </div>
     </div>
+
+    {% if login_info.login_state %}
+    {% else %}
+        <!--本站登录 Modal-->
+        <div id="login-modal-local" class="modal">
+        <div class="modal-content">
+            <div class="row">
+                <div class="col s12 m12 l8 xl6 offset-l2 offset-xl3">
+                    <br>
+                    <br>
+                    <h4 class="center">本站用户登录</h4>
+                    <br>
+                    <div class="row">
+                        <div class="input-field">
+                            <i class="material-icons prefix">account_circle</i>
+                            <input id="login-local-username" type="text" class="validate">
+                            <label for="login-local-username">用户名</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field">
+                            <i class="material-icons prefix">vpn_key</i>
+                            <input id="login-local-password" type="password" class="validate">
+                            <label for="login-local-password">密码</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m6 l6 xl6 center" id="login-local-register-block">
+                            <br class="hide-on-med-and-up">
+                            <a class="btn lime lighten-1 waves-effect" id="login-local-register-btn">
+                                快速注册</a>
+                            <br class="hide-on-med-and-up">
+                        </div>
+                        <div class="col s12 m6 l6 xl6 center">
+                            <br class="hide-on-med-and-up">
+                            <a class="btn green lighten-3 waves-effect" id="login-local-login-btn">
+                                &nbsp;&nbsp;&nbsp;登录&nbsp;&nbsp;&nbsp;</a>
+                            <br class="hide-on-med-and-up">
+                        </div>
+                    </div>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 {% endblock %}
 
 {% block additional-js %}
+    <script src="{% static 'main/lib/tool/secret/salt.js' %}"></script>
+    <script src="{% static 'main/lib/tool/secret/sha256.min.js' %}"></script>
     <script>
         $(document).ready(function () {
             // 为返回按键添加响应
             $('#go-back').click(function () {
                 window.history.back();
             });
+
+            // Modal 控件初始化
+            $('.modal').modal({
+                dismissible: true,
+                opacity: .5,
+                inDuration: 300,
+                outDuration: 200,
+                complete: function () {
+                    // nothing
+                }
+            });
+
+            {% if login_info.login_state %}
+                // 如果用户已经登录了，就为注销按钮添加响应
+                $('#logout-btn').click(function () {
+                    // 发送 Ajax 请求
+                    $.ajax({
+                        url: '/login/logout',
+                        type: 'POST',
+                        dataType: 'json',
+                        async: true,
+                        success: function (json_obj) {
+                            // 查看是否注销成功
+                            // 如果成功了
+                            if (json_obj) {
+                                Materialize.toast('注销成功!两秒后为你刷新页面!', 2000);
+                                setTimeout(function () {
+                                    window.location.reload();
+                                }, 2000);
+                            // 如果没有成功
+                            } else {
+                                Materialize.toast('注销失败!请重试!', 2000);
+                            }
+                        }
+                    })
+                });
+            {% else %}
+                // 本站登录按钮响应
+                $('#login-local-login-btn').click(function () {
+                // 发送 ajax 请求获取 salt
+                var username = $('#login-local-username').val();
+                var password = $('#login-local-password').val();
+                var get_salt_request_obj = {
+                    username: username
+                };
+                $.ajax({
+                    url: '/login/local/get_salt',
+                    async: true,
+                    type: 'POST',
+                    dataType: 'json',
+                    data: JSON.stringify(get_salt_request_obj),
+                    success: function (jsonObj) {
+                        // 如果成功获取到盐
+                        if (jsonObj.state) {
+                            var salt = jsonObj.salt;
+                            // 加盐加密，发送到后端验证
+                            var password_hash = sha256(sha256(password) + salt);
+                            var login_request_obj = {
+                                username: username,
+                                password: password_hash
+                            };
+                            $.ajax({
+                                url: '/login/local/login',
+                                async: true,
+                                type: 'POST',
+                                dataType: 'json',
+                                data: JSON.stringify(login_request_obj),
+                                success: function (newJsonObj) {
+                                    // 如果验证成功
+                                    if (newJsonObj.state) {
+                                        Materialize.toast('登录成功,两秒后为你自动刷新页面', 2000);
+                                        setTimeout(
+                                            function () {
+                                                // 刷新页面
+                                                window.location.reload(true)
+                                            }, 2000
+                                        );
+                                    // 如果验证失败
+                                    } else {
+                                        Materialize.toast(newJsonObj.reason, 4000);
+                                    }
+                                }
+                            });
+                        // 否则
+                        } else {
+                            Materialize.toast(jsonObj.reason, 4000);
+                        }
+                    }
+                });
+            });
+            {% endif %}
         });
     </script>
 {% endblock %}
