--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -8,7 +8,7 @@
 {% block navbar %}
     <nav class="nav-extended cyan">
         <div class="nav-wrapper container">
-            <a href="http://www.kindemh.cn" class="brand-logo">IT小站</a>
+            <a href="http://www.kindemh.cn" class="brand-logo">Kindem</a>
             <ul class="right">
                 <li><a href="#"><i class="material-icons">search</i></a></li>
                 <li class="hide-on-med-and-down"><a href="/message"><i class="material-icons">person</i></a></li>
