--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -11,17 +11,17 @@
             <a href="http://www.kindemh.cn" class="brand-logo">Kindem</a>
             <ul class="right">
                 <li><a href="#"><i class="material-icons">search</i></a></li>
-                <li class="hide-on-med-and-down"><a href="/message"><i class="material-icons">person</i></a></li>
+                <li class="hide-on-med-and-down"><a href="http://www.kindemh.cn/message"><i class="material-icons">person</i></a></li>
             </ul>
             <ul class="left hide-on-large-only">
-                <li><a href="/message"><i class="material-icons">person</i></a></li>
+                <li><a href="http://www.kindemh.cn/message"><i class="material-icons">person</i></a></li>
             </ul>
         </div>
         <div class="nav-content container">
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a class="active">首页</a></li>
-                <li class="tab"><a target="_self" href="/archive">归档</a></li>
-                <li class="tab"><a target="_self" href="/about">关于</a></li>
+                <li class="tab"><a target="_self" href="http://www.kindemh.cn/archive">归档</a></li>
+                <li class="tab"><a target="_self" href="http://www.kindemh.cn/about">关于</a></li>
             </ul>
         </div>
     </nav>
@@ -51,7 +51,7 @@
                                     <p>{{ post.excerpt }}</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="/post/{{ post.pk }}">全文</a>
+                                    <a href="http://www.kindemh.cn/post/{{ post.pk }}">全文</a>
                                     <!--<a href="#">分享</a>-->
                                     <span class="right">{{ post.created_time }}</span>
                                 </div>
@@ -66,7 +66,7 @@
                                     <p>{{ post.excerpt }}</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="/post/{{ post.pk }}">全文</a>
+                                    <a href="http://www.kindemh.cn/post/{{ post.pk }}">全文</a>
                                     <!--<a href="#">分享</a>-->
                                     <span class="right">{{ post.created_time }}</span>
                                 </div>
@@ -83,7 +83,7 @@
                                     <p>{{ post.excerpt }}</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="post/{{ post.pk }}">全文</a>
+                                    <a href="http://www.kindemh.cn/post/{{ post.pk }}">全文</a>
                                     <!--<a href="#">分享</a>-->
                                     <span class="right">{{ post.created_time }}</span>
                                 </div>
@@ -98,7 +98,7 @@
                         {% if page_info.is_first %}
                             <li class="disabled"><a><i class="material-icons">chevron_left</i></a></li>
                         {% else %}
-                            <li class="waves-effect"><a href="/{{ page_info.pre }}">
+                            <li class="waves-effect"><a href="http://www.kindemh.cn/{{ page_info.pre }}">
                                 <i class="material-icons">chevron_left</i></a></li>
                         {% endif %}
 
@@ -107,7 +107,7 @@
                         {% if page_info.is_last %}
                             <li class="disabled"><a><i class="material-icons">chevron_right</i></a></li>
                         {% else %}
-                            <li class="waves-effect"><a href="/{{ page_info.next }}">
+                            <li class="waves-effect"><a href="http://www.kindemh.cn/{{ page_info.next }}">
                                 <i class="material-icons">chevron_right</i></a></li>
                         {% endif %}
                     </ul>
