添加栗子木凤凰芯的友链

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,10 @@
             <div class="row">
                 <div class="col s12 m6 l4 xl4">
                     <h4>联系方式</h4>
-                    <p>QQ: 461425614<br>邮箱: <a href="mailto:461425614@qq.com" class="white-text">461425614@qq.com</a></p>
+                    <p>QQ: 461425614<br>
+                        邮箱: <a href="mailto:461425614@qq.com" class="white-text">461425614@qq.com</a>
+                        <a class="white-text" href="mailto:461425614@qq.com">交换友链</a>
+                    </p>
                     <br>
                 </div>
                 <div class="col s12 m6 l4 xl4">
@@ -67,9 +70,9 @@
                     </ul>
                 </div>
                 <div class="col s12 m6 l4 xl4">
-                    <h4>更多</h4>
+                    <h4>友情链接</h4>
                     <ul>
-                        <li><a class="white-text" href="mailto:461425614@qq.com">交换友链</a></li>
+                        <li><a href="http://chestnut-phoenix.xyz/">栗子木凤凰芯</a></li>
                     </ul>
                 </div>
             </div>
