--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,7 @@
                         <li><a class="white-text" href="http://chestnut-phoenix.xyz/">栗子木凤凰芯</a></li>
                         <li><a class="white-text" href="http://www.architecy.com/">网站架构-架构师记录点滴</a></li>
                         <li><a class="white-text" href="http://www.tigerbook.cn/">虎书博客</a></li>
+                        <li><a class="white-text" href="http://www.codelovers.cn//">编程爱好者之家</a></li>
                     </ul>
                 </div>
             </div>
