--- a/templates/base.html
+++ b/templates/base.html
@@ -72,11 +72,12 @@
                 <div class="col s12 m6 l4 xl4">
                     <h4>友情链接</h4>
                     <ul>
-                        <li><a class="white-text" href="http://chestnut-phoenix.xyz/">栗子木凤凰芯</a></li>
-                        <li><a class="white-text" href="http://www.architecy.com/">网站架构-架构师记录点滴</a></li>
-                        <li><a class="white-text" href="http://www.tigerbook.cn/">虎书博客</a></li>
-                        <li><a class="white-text" href="http://www.codelovers.cn/">编程爱好者之家</a></li>
-                        <li><a class="white-text" href="http://www.tcode.me/">淘代码-专注JS特效</a></li>
+                        <li><a class="white-text" href="http://chestnut-phoenix.xyz/" target="_blank">栗子木凤凰芯</a></li>
+                        <li><a class="white-text" href="http://www.architecy.com/" target="_blank">网站架构-架构师记录点滴</a></li>
+                        <li><a class="white-text" href="http://www.tigerbook.cn/" target="_blank">虎书博客</a></li>
+                        <li><a class="white-text" href="http://www.codelovers.cn/" target="_blank">编程爱好者之家</a></li>
+                        <li><a class="white-text" href="http://www.tcode.me/" target="_blank">淘代码-专注JS特效</a></li>
+                        <li><a class="white-text" href="http://dongnengyu.com/" target="_blank">董能宇的博客</a></li>
                     </ul>
                 </div>
             </div>
